arkts_static_test/03_Types/ets_cases/3.18_Function_Types/compile-fail/TYP_03_18_015_FAIL_READONLY_PARAM_ASSIGN.ets
/**
 * @id TYP_03_18_015_FAIL_READONLY_PARAM_ASSIGN
 * @expect compile-fail
 * @section 3.18
 * @design 函数类型 readonly 参数内赋值应产生编译时错误
 * @note 反向用例：验证 readonly 数组参数在函数体内不能修改
 */
type ReadOnlyArrayOp = (arr: readonly int[]) => void

function testReadonlyParamAssign(): void {
  let op: ReadOnlyArrayOp = (arr: readonly int[]): void => {
    arr[0] = 99 // Compile-time error: readonly array element cannot be assigned
  }
}